--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -7,7 +7,8 @@ sudo pacman -S zsh ripgrep fzf lsd yazi
 #!/bin/sh
 
 sudo apt install zsh ripgrep fzf
-{{ if not (and (eq .chezmoi.osRelease.id "debian") (le .chezmoi.osRelease.versionID 11)) -}}
+
+{{ if not (and (eq .chezmoi.osRelease.id "debian") (le (int .chezmoi.osRelease.versionID) 11)) -}}
 sudo apt install lsd
 {{ end -}}
 {{ end -}}
