--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -203,6 +203,6 @@ stop_conda () {
 # <<< conda initialize <<<
 
 {{ if eq .chezmoi.osRelease.id "ubuntu" -}}
-export PATH="$HOME/.cargo/bin:$PATH" 
+export PATH="$PATH:$HOME/.cargo/bin" 
 {{ end -}}
 
