--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -90,6 +90,9 @@ plugins+=zsh-syntax-highlighting
 #>> git clone https://github.com/joshskidmore/zsh-fzf-history-search ${ZSH_CUSTOM}/plugins/zsh-fzf-history-search
 plugins+=zsh-fzf-history-search
 
+# Disable oh-my-zsh auto-update with chezmoi
+zstyle ':omz:update' mode disabled
+
 # Import oh-my-zsh
 export ZSH=$HOME/.oh-my-zsh
 source $ZSH/oh-my-zsh.sh
